[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pystim300"
version = "0.1.0"
description = "Python driver for the Safran STIM300 IMU over RS422 (Normal / Service / Utility modes)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["stim300", "imu", "rs422", "safran", "sensor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = []

[project.optional-dependencies]
serial = ["pyserial>=3.5"]
test = ["pytest>=7"]
dev = ["pyserial>=3.5", "pytest>=7", "crcmod>=1.7"]

[tool.setuptools.packages.find]
include = ["pystim300*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
